Changelog for Miosix np embedded OS

- Now Makefile.inc has no predefined board. This has been done in order to
  avoid mistakenly compiling for the wrong board.
- Fixed bug in testsuite: it failed compiling with exceptions disabled due
  to RTTI dependence.
- Fixed a bug in Thread::create() causing a crash when the heap is full.
- Changed PROGRAM_CMDLINE for stm32vldiscovery from vsprog to stm32flash
- Unified the CMSIS directories in the various subdirectories of arch into
  one CMSIS, in order to reduce the amount of code duplication and to avoid
  having to deal with subtle incompatibilities between different CMSIS versions
- Added support for stm32f2xx and specifically the new stm32f4discovery with
  an LCD display.
- After so many changes and improvements, officially releasing Miosix 2.0beta1
v2.0beta1
- Upgraded compiler build scripts to build a redistributable Miosix Toolchain
  for both Linux and Windows
- Changed makefile: moved from bash for loops to GNU Make for loops to avoid
  a bash dependence that makes it difficult to build Miosix under windows
- Added servomotor driving library for stm32f4discovery and stm32vldiscovery
- Modified BSPs to instantiate the new classes
- Changed basicFilesystemSetup() to take a pointer to a device to mount as /sd
- Added SD drivers for stm32 and lpc2000 to miosix/common/drivers, adapted to
  the Device interface
- Fixed bug in the testsuite that was causing a file to be opened for reading
  while another thread still had it opened for writing.
- Removed interfaces/disk.h
- Starting to remove disk interface. Aggregated stm32f2 and stm32f4 drivers
  into one.
- Breaking change; the default serial for the stm32f4discovery is now USART3
  Please connect to PB10 and PB11 instead of PA2 and PA3.
- Completed serial new serial port driver, added DMA support for USART2 and 3
- Added -f option to rm in Makefile and miosix/Makefile, so that when
  doing make clean on an already clean directory, no errors are reported